Edited wiki page SdkTutorial through web user interface.

--- a/wiki/SdkTutorial.wiki
+++ b/wiki/SdkTutorial.wiki
@@ -6,30 +6,35 @@
 
 <wiki:toc max_depth="3" />
 
-
 ==Overview==
-SDK is a standalone Java library. It comes as a set of .jar files or as an Eclipse plugins. As of [Release_0_3_0 0.3.0 version] it supports [ChromeDevToolsProtocol 'DevTools' protocol], native V8 protocol and [WIP WebKit Remote Debugging Protocol]. All of them implement the same API and differs only in attach interfaces. !WebKit Remote Debugging Protocol support is a new subproject called here “WIP” (stands historically for !WebInspector Protocol). Several versions of WIP implementation are deployed simultaneously in modules called Wip Backends. Each of them corresponds to a particular version of !WebKit Remote Debugging Protocol (see details in release notes[]). As of 0.3.0 it is user's responsibility to choose the correct backend. 
+
+SDK is a standalone Java library. It comes as a set of .jar files or as an Eclipse plugins. As of [Release_0_3_0 0.3.0 version] it supports [ChromeDevToolsProtocol 'DevTools' protocol], native V8 protocol and [WIP WebKit Remote Debugging Protocol]. They all are implemented with the common API and differs only in attach interfaces.
+
+!WebKit Remote Debugging Protocol support is a new subproject called here “WIP” (stands historically for !WebInspector Protocol). Several versions of WIP implementation are deployed simultaneously in modules called Wip Backends. Each of them corresponds to a particular version of !WebKit Remote Debugging Protocol (see details in [Release_0_3_0 release notes]). As of 0.3.0 it is user's responsibility to choose the correct backend. 
 
 ==Getting started==
-1. Eclipse framework. Install FEATURE or manually install all org.chromium.sdk* packages.
-2. Non-Eclipse framework. Get all .jar files of SDK. Put all of them in your classpath, except for backend jars. You should pick only one of them, because they contain different versions of the same classes.
+  # *Eclipse framework.* Install "ChromeDevTools SDK" and "ChromeDevTools SDK WIP Backends" features or manually install all org.chromium.sdk`*` packages.
+  # *Non-Eclipse framework.* Get all .jar files of SDK. Put them in your classpath. Get WIP backend jars and put *one* of them in your classpath. (You cannot put all backend jars in classpath, because they have conflicting class names. You can workaround it with several classloaders though.)
 
-==Attaching to JavaScript VM==
-Attachment is the part where API diverges.
-===1. 'DevTools'[] protocol.===
+==Attaching to !JavaScript VM==
+Attachment is the part where SDK API is protocol-dependent.
+
+====1. !DevTools Protocol.====
+To connect by '[ChromeDevToolsProtocol DevTools]' protocol, try the following code:
 {{{
-Browser browser = BrowserFactory.getInstance().create(new InetSocketAddress(“localhost”, “9222”), null);
+Browser browser = BrowserFactory.getInstance().create(new InetSocketAddress(“localhost”, 9222), null);
 TabFetcher tabFetcher = browser.createTabFetcher();
 List<? extends TabConnector> tabList = tabFetcher.getTabs();
-// Choose your tab somehow.
-BrowserTab tab = tabList.get(<choose your tab>).attach(listener);
+BrowserTab tab = tabList.get(<choose your tab>).attach(listener);  // Choose your tab somehow.
 JavascriptVm javascriptVm = tab;
 tabFetcher.dismiss(); // TabFecther is needed to accurately manage single shared connection to Browser.
 }}}
-===2. WIP[]===
+
+====2. !WebKit Remote Debugging Protocol====
+To connect by [WIP WebKit Remote Debugging Protocol] use WIP [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/wip/package-summary.html package]:
 {{{
 WipBrowser browser = WipBrowserFactory.INSTANCE.createBrowser(
-    new InetSocketAddress(“localhost”, “9222”), null);
+    new InetSocketAddress(“localhost”, 9222), null);
 WipBackend backend;
 #ifdef ECLIPSE
 backend = BackendRegistry.INSTANCE.getBackends().get(<choose your backend>); 
@@ -40,27 +45,31 @@ backend = backendFactory.create();
 WipBrowserTab tab = browser.getTabs(backend).get(<choose your tab>).attach(listener);
 JavascriptVm javascriptVm = tab.getJavascriptVm()
 }}}
-===3. Standalone Javascript VM===
+
+====3. Standalone !JavaScript VM====
+Standalone connection uses native [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 protocol] that is implemented by DebuggerAgent from V8 library.
 {{{
 StandaloneVm standaloneVm =
-    BrowserFactory.getInstance().createStandalone(new InetSocketAddress(“localhost”, “9222”), null);
+    BrowserFactory.getInstance().createStandalone(new InetSocketAddress(“localhost”, 9222), null);
 standaloneVm.attach(listener);
 JavascriptVm javascriptVm =  standaloneVm;
 }}}
+
+
 ==First steps==
-The API is pretty much straightforward. For example you can try to set a breakpoint:
+The API is pretty much straightforward. Once you got {{{JavascriptVM}}} object, you can make various requests. For example you can try to set a breakpoint:
 {{{
 javascriptVm.setBreakpoint(new Breakpoint.Target.ScriptName(“index.html”),
     5, // line
     1, // column
     true, null, null, null); // other parameters.
 }}}
-Hopefully some time later the VM will pause on this breakpoint. Your program should learn about it from the DebugEventListener.
+Hopefully some time later the VM will pause on this breakpoint. Your program should learn about it from the !DebugEventListener.
 
 ==!DebugEventListener==
-What is called simply 'listener' in the previous section is a central part of SDK API. That's how your program learns about new events in Javascript VM. Once you attached, SDK will call your listener in asynchronous manner.
+What is called simply 'listener' in the previous code snippet is a central part of SDK API. That's how your program learns about new events in !JavaScript VM. Once you attached, SDK will call your listener on each event in asynchronous manner.
 
-This makes it difficult to simply play around with SDK, because your program is essentially multi-threaded. However, for the scripting purposes you can safely ignore most of the events except for 'suspended':
+This asynchronism makes it difficult to simply play around with SDK, because your program becomes essentially multi-threaded. However, for the scripting purposes you can safely ignore most of the events except for 'suspended':
 {{{
 class SimpleListener implements DebugEventListener {
   DebugContext savedDebugContext;
@@ -74,30 +83,40 @@ class SimpleListener implements DebugEventListener {
   }
   ...
 }
-in the main code:
+SimpleListener listener = new SimpleListener();
+}}}
+in the main script:
+{{{
 // Let's patiently wait for our breakpoint to hit.
 boolean res = listener.semaphore.tryAcquire(5, TimeUnit.HOURS);
 if (!res) {
   throw new RuntimeException(“Bad luck”);
 }
+
 DebugContext debugContext = listener.savedDebugContext;
+
 // Let's get stacktrace.
 List<? extends CallFrame> stackTrace = debugContext.getCallFrames();
-// Now we can see local variables!
+
+// Now let's iterate over local variables...
 }}}
 
 ==SDK Thread Model==
-SDK is multi-threaded library. First of all it means that you can call its methods from different threads (with some reasonable limitations of course). Secondly it means that SDK itself will call you asynchronously. All the calls to your listener are made from a single thread called Dispatch Thread. This thread is allocated one per connection. The good news is that you can rely on the fact that all events are coming consequently. The bad news is that you should be careful and return from the callbacks promptly. In particular you cannot call certain blocking methods of API, because it's a certain deadlock (you cannot block the road and waiting for another car to come at the same time). 
+SDK is multi-threaded library. It means that you can call its methods from different threads (with some reasonable limitations of course).
+
+Also it means that SDK itself will call you asynchronously from its own thread. Each !JavascriptVm allocates a dedicated thread called Dispatch Thread. That's where you listener will be called from. The good news is that you can rely on the fact that all events are coming consequently from one thread. The bad news is that you should be careful and return from the callbacks promptly. In particular you cannot call certain blocking methods of API, because it's a certain deadlock (you cannot block the road and waiting for another car to come at the same time).
+
+All callbacks are called from either the Dispatch Thread or from your own thread (typically in extreme cases).
 
 ==Blocking and non-blocking method.==
-In the API there are some methods that work completely locally. For example JavascriptVm.getVersion() will simply return a field. Other methods create requests that are sent over wire to JavaScript VM and wait for the response to (hopefully) come back.
-This latter kind of methods could be implemented in 2 styles. SDK has an example of both styles:
+There are methods in API that work completely locally. For example JavascriptVm.getVersion() will simply return a field. Other methods create requests, send them over wire to JavaScript VM and wait for the response that should (hopefully) come.
+This latter kind of methods could be implemented in 2 styles. In SDK you will find example of both styles:
 
-1. Blocking/Synchronous. The method conveniently returns result to caller. For example JsObject.getProperties() works like this. What may be inconvenient is that you have to have a dedicated thread for the time of entire operation. And you cannot call this methods from SDK callbacks and listeners, because you would stop the Dispatch Thread forever.
+1. *Blocking (Synchronous).* The method conveniently returns result to caller. For example {{{JsObject.getProperties()}}} works like this. What may be inconvenient is that you have  to wait for a result, which means that your thread is blocked for the time of entire operation. So several simultaneous operations you will need several threads. Plus you cannot call this methods from SDK callbacks and listeners, because you would stop the Dispatch Thread forever.
 
-2. Non-blocking/Asynchronous. The method doesn't return result. Instead it sends the corresponding request and returns control to you. You have to provide a callback that will be called (from Dispatch Thread) some time in the future when the result is there. This is more powerful comparing to Blocking approach, but is obviously less useful.
+2. Asynchronous (Non-blocking). The method doesn't return result. Instead it starts work in some way (for example sends the corresponding request) and returns control to you. You have to provide a callback that will be notified some time in the future when result is there. This is more flexible comparing to Blocking approach, but is obviously less useful.
 
-SDK combines both approaches optimized for the typical use: some methods are blocking, some asynchronous. Some methods come in 2 styles, like in JsEvaluateContext.
+SDK combines both approaches optimized for the typical use cases: some methods are blocking, some asynchronous. Some methods come in 2 styles, like in [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JsEvaluateContext.html JsEvaluateContext].
 
 Some methods are blocking, but they still requires a callback. That's needed in some cases because:
   # callback can accept both error and result, while in Java method can only return 1 type,
